Update dashboard, fix some issues  - add appropriate order's order for each player  - add colors to dashboard table  - define appropriate dashboard table columns for each player  - fix "comments always required" bug  - disable default table sorting by id  - fix "long words overflow" bug

--- a/src/main/webapp/resources/style/style.css
+++ b/src/main/webapp/resources/style/style.css
@@ -402,3 +402,7 @@ div.table-responsive>div.dataTables_wrapper>div.row>div[class^="col-"]:last-chil
 .newComment2 {
 	border-bottom: 5px dotted #eee;
 }
+
+td {
+	word-break: break-all;
+}
